# ATT_Planner

./: .flake8  Dockerfile  Makefile  README.rst  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
att_planner/: manage.py
att_planner/commons/: authentication.py
att_planner/commons/models/: created_modified.py  custom_model.py
att_planner/planner/: admin.py  apps.py  urls.py
att_planner/planner/migrations/: 0001_initial.py  0002_task_user.py
att_planner/planner/models/: __init__.py  bucket.py  task.py  user.py
att_planner/planner/serializers/: bucket.py  task.py  user.py
att_planner/planner/views/: bucket.py  bucket_tasks.py  index.py  task.py  user.py
att_planner/project/: asgi.py  urls.py  wsgi.py
att_planner/project/settings/: __init__.py  base.py  envvars.py  logging.py  rest_framework.py
att_planner/project/settings/templates/: settings.dev.py  settings.unittests.py
scripts/: entrypoint.sh  production_data.py
